{
  "@@author": "Mauyz",
  "@@locale": "fr",
  "appTitle": "Gestion des tâches",
  "addTask": "Ajouter une nouvelle tâche",
  "filterTaskList": "Filtrer la liste",
  "all": "Toutes",
  "inProgress": "En cours",
  "completed": "Complètes",
  "errorOccurred": "Une erreur se produit lors du chargement des données",
  "noTask": "Aucune tâche",
  "taskDeletionConfirm": "Voulez-vous supprimer la tâche",
  "taskDeleted": "Tâche supprimée",
  "yesText": "Oui",
  "noText": "Non",
  "updateTask": "Modifier une tâche",
  "enterTheTitle": "Entrer le titre",
  "titleRequired": "Le titre est obligatoire",
  "add": "Ajouter",
  "update": "Modifier",
  "enterTheDescription": "Entrer la description",
  "descRequired": "La description est obligatoire",
  "taskAdded": "Tâche ajoutée",
  "taskUpdated": "Tâche modifiée",
  "title": "Titre",
  "description": "Description",
  "status": "Statut"
}